Enhance RAG notebook with feedback loop improvements and bilingual support
- Added Chinese translations for key sections to improve accessibility.
- Updated model references for embedding creation and response generation.
- Improved clarity and conciseness of responses generated by the RAG system.
- Enhanced the structure of feedback analysis to better highlight improvements.
- Adjusted execution counts for consistency in notebook execution flow.

--- a/11_反馈循环RAG.ipynb
+++ b/11_反馈循环RAG.ipynb
@@ -9,15 +9,22 @@
    },
    "source": [
     "# Feedback Loop in RAG\n",
+    "# 反馈循环RAG\n",
     "\n",
-    "In this notebook, I implement a RAG system with a feedback loop mechanism that continuously improves over time. By collecting and incorporating user feedback, our system learns to provide more relevant and higher-quality responses with each interaction.\n",
+    "In this notebook, I implement a RAG system with a feedback loop mechanism that continuously improves over time. By collecting and incorporating user feedback, our system learns to provide more relevant and higher-quality responses with each interaction.  \n",
+    "在此笔记本中，我实现了一个具有反馈循环机制的RAG系统，该机制会不断改进。通过收集和整合用户反馈，我们的系统会学习到随着每次互动提供更有意义和更高质量的响应。\n",
     "\n",
-    "Traditional RAG systems are static - they retrieve information based solely on embedding similarity. With a feedback loop, we create a dynamic system that:\n",
+    "Traditional RAG systems are static - they retrieve information based solely on embedding similarity. With a feedback loop, we create a dynamic system that:  \n",
+    "传统的RAG系统是静态的 - 它们仅根据嵌入相似性检索信息。通过反馈循环，我们创建了一个动态系统，该系统：\n",
     "\n",
-    "- Remembers what worked (and what didn't)\n",
-    "- Adjusts document relevance scores over time\n",
-    "- Incorporates successful Q&A pairs into its knowledge base\n",
-    "- Gets smarter with each user interaction"
+    "- Remembers what worked (and what didn't)  \n",
+    "- 记住哪些工作（哪些没有）\n",
+    "- Adjusts document relevance scores over time  \n",
+    "- 随时间调整文档相关性分数\n",
+    "- Incorporates successful Q&A pairs into its knowledge base  \n",
+    "- 将成功的Q&A对融入其知识库\n",
+    "- Gets smarter with each user interaction  \n",
+    "- 随着每个用户互动变得更聪明"
    ]
   },
   {
@@ -125,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +259,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_embeddings(text, model=\"BAAI/bge-en-icl\"):\n",
+    "def create_embeddings(text, model=\"Qwen/Qwen3-Embedding-4B\"):\n",
     "    \"\"\"\n",
     "    Creates embeddings for the given text.\n",
     "\n",
@@ -476,7 +483,7 @@
     "\n",
     "    # Call the LLM API with zero temperature for deterministic output\n",
     "    response = client.chat.completions.create(\n",
-    "        model=\"meta-llama/Llama-3.2-3B-Instruct\",\n",
+    "        model=\"deepseek-ai/DeepSeek-V3\",\n",
     "        messages=[\n",
     "            {\"role\": \"system\", \"content\": system_prompt},\n",
     "            {\"role\": \"user\", \"content\": user_prompt}\n",
@@ -653,7 +660,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_response(query, context, model=\"meta-llama/Llama-3.2-3B-Instruct\"):\n",
+    "def generate_response(query, context, model=\"deepseek-ai/DeepSeek-V3\"):\n",
     "    \"\"\"\n",
     "    Generate a response based on the query and context.\n",
     "    \n",
@@ -666,7 +673,11 @@
     "        str: Generated response\n",
     "    \"\"\"\n",
     "    # Define the system prompt to guide the AI's behavior\n",
-    "    system_prompt = \"\"\"You are a helpful AI assistant. Answer the user's question based only on the provided context. If you cannot find the answer in the context, state that you don't have enough information.\"\"\"\n",
+    "    system_prompt = \"\"\"\n",
+    "    You are a helpful AI assistant. \n",
+    "    Answer the user's question based only on the provided context. \n",
+    "    If you cannot find the answer in the context, state that you don't have enough information.\n",
+    "    \"\"\"\n",
     "    \n",
     "    # Create the user prompt by combining the context and the query\n",
     "    user_prompt = f\"\"\"\n",
@@ -698,7 +709,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def rag_with_feedback_loop(query, vector_store, feedback_data, k=5, model=\"meta-llama/Llama-3.2-3B-Instruct\"):\n",
+    "def rag_with_feedback_loop(query, vector_store, feedback_data, k=5, model=\"deepseek-ai/DeepSeek-V3\"):\n",
     "    \"\"\"\n",
     "    Complete RAG pipeline incorporating feedback loop.\n",
     "    \n",
@@ -1037,7 +1048,7 @@
     "\n",
     "        # Call the OpenAI API to generate a comparison analysis\n",
     "        response = client.chat.completions.create(\n",
-    "            model=\"meta-llama/Llama-3.2-3B-Instruct\",\n",
+    "            model=\"deepseek-ai/DeepSeek-V3\",\n",
     "            messages=[\n",
     "                {\"role\": \"system\", \"content\": system_prompt},\n",
     "                {\"role\": \"user\", \"content\": comparison_prompt}\n",
@@ -1090,13 +1101,18 @@
       "Generating response...\n",
       "\n",
       "=== Response ===\n",
-      "Based on the provided context, a neural network is a type of deep neural network that is particularly effective for processing data. The context does not provide a detailed explanation of how a neural network functions, but it does mention that neural networks are inspired by the structure and function of the human brain.\n",
+      "Based on the provided context, a neural network is a type of artificial intelligence model inspired by the structure and function of the human brain. Specifically, deep learning uses artificial neural networks with multiple layers (deep neural networks) to analyze data. \n",
       "\n",
-      "However, it can be inferred that a neural network is a complex system that uses multiple layers to analyze data. The context mentions that deep learning is a subfield of machine learning that uses artificial neural networks with multiple layers (deep neural networks) to analyze data.\n",
+      "Key points about how neural networks function:\n",
+      "1. They consist of interconnected nodes (like neurons) organized in layers - input, hidden, and output layers.\n",
+      "2. Deep learning networks use multiple hidden layers to progressively extract higher-level features from raw input.\n",
+      "3. They learn by processing data and adjusting connections (weights) between nodes to minimize errors in predictions or classifications.\n",
+      "4. Different types are specialized for different tasks:\n",
+      "   - Convolutional Neural Networks (CNNs) process images/videos using convolutional layers\n",
+      "   - Recurrent Neural Networks (RNNs) handle sequential data through feedback connections\n",
+      "5. They've achieved breakthroughs in image recognition, natural language processing, and speech recognition.\n",
       "\n",
-      "In the context of the provided text, neural networks are used in various applications such as image recognition, natural language processing, and speech recognition. They are also used in tasks like object detection, facial recognition, and medical image analysis.\n",
-      "\n",
-      "While the context does not provide a comprehensive explanation of how a neural network functions, it can be inferred that neural networks are designed to learn patterns and structures in the data through a process of trial and error, similar to reinforcement learning. However, the exact mechanism of how neural networks function is not explicitly stated in the provided context.\n",
+      "The context doesn't provide more detailed information about the exact mathematical functioning of neural networks, but establishes they are brain-inspired models that learn patterns from data through layered architectures.\n",
       "\n",
       "=== ROUND 2: WITH FEEDBACK ===\n",
       "Extracting text from PDF...\n",
@@ -1105,43 +1121,35 @@
       "Creating embeddings for chunks...\n",
       "Added 42 chunks to the vector store\n",
       "Fine-tuning index with high-quality feedback...\n",
-      "Added enhanced content from feedback: What is a neural network and how does it function?...\n",
-      "Fine-tuned index now has 43 items (original: 42)\n",
+      "No high-quality feedback found for fine-tuning.\n",
       "\n",
       "Query 1: What is a neural network and how does it function?\n",
       "\n",
       "=== Processing query with feedback-enhanced RAG ===\n",
       "Query: What is a neural network and how does it function?\n",
       "Adjusting relevance scores based on feedback history...\n",
-      "  Document 1: Adjusted score from 0.8386 to 1.0902 based on 1 feedback(s)\n",
-      "  Document 4: Adjusted score from 0.6162 to 0.8010 based on 1 feedback(s)\n",
-      "  Document 5: Adjusted score from 0.6023 to 0.7830 based on 1 feedback(s)\n",
+      "  Document 1: Adjusted score from 0.4557 to 0.5012 based on 1 feedback(s)\n",
+      "  Document 5: Adjusted score from 0.3426 to 0.3769 based on 1 feedback(s)\n",
       "Generating response...\n",
       "\n",
       "=== Response ===\n",
-      "Based on the provided context, a neural network is a complex system that uses multiple layers to analyze data. It is inspired by the structure and function of the human brain and is particularly effective for processing data. Neural networks are used in various applications such as image recognition, natural language processing, and speech recognition.\n",
+      "Based on the provided context, a neural network is a type of artificial intelligence model inspired by the structure and function of the human brain. It is a key component of deep learning, which uses artificial neural networks with multiple layers (deep neural networks) to analyze data. \n",
       "\n",
-      "The context does not provide a detailed explanation of how a neural network functions, but it can be inferred that neural networks are designed to learn patterns and structures in the data through a process of trial and error. This process is similar to reinforcement learning, where the neural network receives feedback in the form of rewards or penalties, allowing it to adjust its parameters and improve its performance over time.\n",
+      "Neural networks function by processing input data through interconnected layers of nodes (or neurons). Each layer transforms the input data, extracting features and patterns to make predictions or classifications. The context highlights two specific types of neural networks:\n",
       "\n",
-      "Neural networks are composed of multiple layers, including convolutional layers, recurrent layers, and others. These layers work together to analyze the input data and make predictions or take actions. The exact mechanism of how neural networks function is not explicitly stated in the provided context, but it is clear that they are a powerful tool for analyzing and processing complex data.\n",
+      "1. **Convolutional Neural Networks (CNNs)**: These are particularly effective for processing images and videos. They use convolutional layers to automatically learn features from input data and are widely used in tasks like object detection, facial recognition, and medical image analysis.\n",
       "\n",
-      "In the context of the provided text, neural networks are used in various applications such as:\n",
+      "2. **Recurrent Neural Networks (RNNs)**: These are designed for sequential data, such as text or time series. They have feedback connections that allow information to persist over time, making them suitable for tasks like language translation, speech recognition, and sentiment analysis.\n",
       "\n",
-      "* Image recognition\n",
-      "* Natural language processing\n",
-      "* Speech recognition\n",
-      "* Object detection\n",
-      "* Facial recognition\n",
-      "* Medical image analysis\n",
-      "\n",
-      "Overall, neural networks are a complex and powerful tool for analyzing and processing data, and their applications continue to expand across various industries and domains.\n",
+      "Neural networks learn from data, improving their performance over time, and have achieved significant breakthroughs in areas like image recognition, natural language processing, and speech recognition.\n",
       "\n",
       "=== COMPARING RESULTS ===\n",
       "\n",
       "Query 1: What is a neural network and how does it function?\n",
-      "Analysis: Comparing the two responses, the feedback-enhanced RAG response is significantly better than the standard RAG response. Here's a breakdown of the improvements:\n",
+      "Analysis: ### Comparison of Responses\n",
       "\n",
-      "1. **Relevance to the query**: Both res...\n"
+      "#### **1. Relevance to the Query**\n",
+      "- **Standard RAG**: The response is relevant but includes some extraneous details (e.g., deep learning context) that slightly dilute the...\n"
      ]
     }
    ],
@@ -1221,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1234,30 +1242,66 @@
       "Query 1: What is a neural network and how does it function?\n",
       "\n",
       "Analysis of feedback impact:\n",
-      "Comparing the two responses, the feedback-enhanced RAG response is significantly better than the standard RAG response. Here's a breakdown of the improvements:\n",
+      "### Comparison of Responses\n",
       "\n",
-      "1. **Relevance to the query**: Both responses address the query, but the feedback-enhanced RAG response provides a more comprehensive and detailed explanation of what a neural network is and how it functions. It also provides more specific examples of applications, which shows a better understanding of the topic.\n",
+      "#### **1. Relevance to the Query**\n",
+      "- **Standard RAG**: The response is relevant but includes some extraneous details (e.g., deep learning context) that slightly dilute the focus on neural networks.\n",
+      "- **Feedback-enhanced RAG**: More tightly focused on the query, emphasizing neural networks and their functioning without unnecessary digressions. The feedback loop likely helped refine the retrieval to prioritize core concepts.\n",
       "\n",
-      "2. **Accuracy of information**: The feedback-enhanced RAG response is more accurate, as it provides a clear and concise explanation of how neural networks function, including the concept of trial and error, reinforcement learning, and the role of feedback. The standard RAG response is less accurate, as it only mentions that neural networks are inspired by the human brain and that they are used in various applications, but does not provide a clear explanation of how they function.\n",
+      "**Winner**: Feedback-enhanced RAG (more concise and on-topic).\n",
       "\n",
-      "3. **Completeness**: The feedback-enhanced RAG response is more complete, as it provides a detailed explanation of the components of a neural network, including convolutional layers, recurrent layers, and others. The standard RAG response only mentions that neural networks are used in various applications, but does not provide a clear explanation of how they function.\n",
+      "---\n",
       "\n",
-      "4. **Clarity and conciseness**: The feedback-enhanced RAG response is more concise and clear, as it provides a clear and concise explanation of how neural networks function and their applications. The standard RAG response is less concise and less clear, as it only mentions that neural networks are inspired by the human brain and that they are used in various applications, but does not provide a clear explanation of how they function.\n",
+      "#### **2. Accuracy of Information**\n",
+      "- Both responses correctly define neural networks and their inspiration from the human brain.\n",
+      "- Both accurately describe CNNs and RNNs.\n",
+      "- Neither provides incorrect information, but the **feedback-enhanced version** avoids minor redundancies (e.g., repeating \"deep learning\" unnecessarily).\n",
       "\n",
-      "The feedback loop has significantly improved the response quality by:\n",
+      "**Winner**: Feedback-enhanced RAG (slightly more polished and precise).\n",
       "\n",
-      "* Providing a clear and concise explanation of how neural networks function\n",
-      "* Providing more specific examples of applications\n",
-      "* Addressing the limitations of the standard RAG response (e.g., lack of clarity and concision)\n",
-      "* Providing a more accurate explanation of the components of a neural network\n",
+      "---\n",
       "\n",
-      "The feedback loop has helped to identify the areas where the standard RAG response was lacking and has provided a more comprehensive and detailed explanation of the topic. This is a clear example of how a feedback loop can improve the quality of a response.\n",
+      "#### **3. Completeness**\n",
+      "- **Standard RAG**: Covers the basics (layers, learning process, types of networks) but lacks depth on how weights are adjusted (a key part of the reference answer).\n",
+      "- **Feedback-enhanced RAG**: Similarly omits details about weight adjustment (a gap in both responses). However, it better structures the explanation of CNNs and RNNs, making it feel more complete despite the same core omission.\n",
+      "\n",
+      "**Winner**: Feedback-enhanced RAG (better organization compensates for shared gaps).\n",
+      "\n",
+      "---\n",
+      "\n",
+      "#### **4. Clarity and Conciseness**\n",
+      "- **Standard RAG**: Clear but slightly repetitive (e.g., \"deep learning\" mentioned multiple times). The bullet-point format helps readability but feels less fluid.\n",
+      "- **Feedback-enhanced RAG**: More concise and fluid, with better transitions between ideas. The feedback loop likely helped streamline the response by removing redundant phrasing.\n",
+      "\n",
+      "**Winner**: Feedback-enhanced RAG (more polished and easier to follow).\n",
+      "\n",
+      "---\n",
+      "\n",
+      "### **Role of the Feedback Loop**\n",
+      "The feedback-enhanced RAG shows subtle but meaningful improvements:\n",
+      "1. **Relevance**: The response is more tightly aligned with the query, avoiding minor tangents.\n",
+      "2. **Conciseness**: Redundant phrases (e.g., repeated mentions of deep learning) are trimmed.\n",
+      "3. **Structure**: The explanation flows better, with clearer emphasis on key points (CNNs/RNNs).\n",
+      "\n",
+      "However, neither response fully addresses the **weight adjustment process** (a key part of the reference answer). This suggests the feedback loop may not have corrected a retrieval gap in the underlying knowledge base.\n",
+      "\n",
+      "---\n",
+      "\n",
+      "### **Final Verdict**\n",
+      "The **feedback-enhanced RAG** provides a better response overall due to:\n",
+      "- Improved relevance and conciseness.\n",
+      "- Better organization and clarity.\n",
+      "- More polished phrasing (likely due to iterative refinement).\n",
+      "\n",
+      "**Areas for Further Improvement**:\n",
+      "- Both versions could better explain the learning mechanism (weight adjustment).\n",
+      "- The feedback loop could be enhanced to prioritize missing critical details from the reference answer.\n",
       "\n",
       "--------------------------------------------------\n",
       "\n",
       "\n",
       "Response length comparison (proxy for completeness):\n",
-      "Round 1: 1256.0 chars\n"
+      "Round 1: 1253.0 chars\n"
      ]
     }
    ],
@@ -1291,7 +1335,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv-new-specific-rag",
+   "display_name": "rag",
    "language": "python",
    "name": "python3"
   },
@@ -1305,7 +1349,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.23"
   }
  },
  "nbformat": 4,
