docs: 增加Self-RAG的中文描述并优化分析内容
在本notebook中增加了Self-RAG的中文描述，使其更适合非英文用户。对文档中的Self-RAG关键组件进行了详细解释，并增加了中文说明。

将模型名称从`meta-llama/Llama-3.2-3B-Instruct`替换为`deepseek-ai/DeepSeek-V3`，以使用更强大的模型进行嵌入和响应生成。

优化了对生成响应的系统提示，使其更具可读性和指导性。

更新了对不同场景下Self-RAG和Traditional RAG性能的分析内容，增加了更多具体的比较和解释。

--- a/13_自监督RAG.ipynb
+++ b/13_自监督RAG.ipynb
@@ -9,17 +9,25 @@
    },
    "source": [
     "# Self-RAG: A Dynamic Approach to RAG\n",
+    "# 自监督RAG: 一种动态的RAG方法\n",
     "\n",
-    "In this notebook, I implement Self-RAG, an advanced RAG system that dynamically decides when and how to use retrieved information. Unlike traditional RAG approaches, Self-RAG introduces reflection points throughout the retrieval and generation process, resulting in higher quality and more reliable responses.\n",
+    "In this notebook, I implement Self-RAG, an advanced RAG system that dynamically decides when and how to use retrieved information. Unlike traditional RAG approaches, Self-RAG introduces reflection points throughout the retrieval and generation process, resulting in higher quality and more reliable responses.  \n",
+    "在本notebook中，我实现了Self-RAG，一种动态的RAG系统，它在检索和生成过程中决定何时以及如何使用检索到的信息。与传统的RAG方法不同，Self-RAG在检索和生成过程中引入了反射点，从而生成更高质量和更可靠的响应。\n",
     "\n",
     "## Key Components of Self-RAG\n",
-    "\n",
-    "1. **Retrieval Decision**: Determines if retrieval is even necessary for a given query\n",
+    "## Self-RAG的关键组件\n",
+    "1. **Retrieval Decision**: Determines if retrieval is even necessary for a given query  \n",
+    "检索决策：确定给定查询是否需要进行检索\n",
     "2. **Document Retrieval**: Fetches potentially relevant documents when needed  \n",
-    "3. **Relevance Evaluation**: Assesses how relevant each retrieved document is\n",
-    "4. **Response Generation**: Creates responses based on relevant contexts\n",
-    "5. **Support Assessment**: Evaluates if responses are properly grounded in the context\n",
-    "6. **Utility Evaluation**: Rates the overall usefulness of generated responses"
+    "文档检索：在需要时获取可能相关的文档\n",
+    "3. **Relevance Evaluation**: Assesses how relevant each retrieved document is  \n",
+    "相关性评估：衡量每个检索到的文档的相关性\n",
+    "4. **Response Generation**: Creates responses based on relevant contexts  \n",
+    "响应生成：基于相关上下文创建响应\n",
+    "5. **Support Assessment**: Evaluates if responses are properly grounded in the context  \n",
+    "支撑评估：评估生成的响应是否充分地基于上下文\n",
+    "6. **Utility Evaluation**: Rates the overall usefulness of generated responses  \n",
+    "效用评估：评估生成的响应的整体有用性"
    ]
   },
   {
@@ -127,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +243,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_embeddings(text, model=\"BAAI/bge-en-icl\"):\n",
+    "def create_embeddings(text, model=\"Qwen/Qwen3-Embedding-4B\"):\n",
     "    \"\"\"\n",
     "    Creates embeddings for the given text.\n",
     "\n",
@@ -351,7 +359,7 @@
     "    \n",
     "    # Generate response from the model\n",
     "    response = client.chat.completions.create(\n",
-    "        model=\"meta-llama/Llama-3.2-3B-Instruct\",\n",
+    "        model=\"deepseek-ai/DeepSeek-V3\",\n",
     "        messages=[\n",
     "            {\"role\": \"system\", \"content\": system_prompt},\n",
     "            {\"role\": \"user\", \"content\": user_prompt}\n",
@@ -410,7 +418,7 @@
     "    \n",
     "    # Generate response from the model\n",
     "    response = client.chat.completions.create(\n",
-    "        model=\"meta-llama/Llama-3.2-3B-Instruct\",\n",
+    "        model=\"deepseek-ai/DeepSeek-V3\",\n",
     "        messages=[\n",
     "            {\"role\": \"system\", \"content\": system_prompt},\n",
     "            {\"role\": \"user\", \"content\": user_prompt}\n",
@@ -474,7 +482,7 @@
     "    \n",
     "    # Generate response from the model\n",
     "    response = client.chat.completions.create(\n",
-    "        model=\"meta-llama/Llama-3.2-3B-Instruct\",\n",
+    "        model=\"deepseek-ai/DeepSeek-V3\",\n",
     "        messages=[\n",
     "            {\"role\": \"system\", \"content\": system_prompt},\n",
     "            {\"role\": \"user\", \"content\": user_prompt}\n",
@@ -532,7 +540,7 @@
     "    \n",
     "    # Generate the utility rating using the OpenAI client\n",
     "    response = client.chat.completions.create(\n",
-    "        model=\"meta-llama/Llama-3.2-3B-Instruct\",\n",
+    "        model=\"deepseek-ai/DeepSeek-V3\",\n",
     "        messages=[\n",
     "            {\"role\": \"system\", \"content\": system_prompt},\n",
     "            {\"role\": \"user\", \"content\": user_prompt}\n",
@@ -576,7 +584,8 @@
     "        str: Generated response\n",
     "    \"\"\"\n",
     "    # System prompt to instruct the AI on how to generate a helpful response\n",
-    "    system_prompt = \"\"\"You are a helpful AI assistant. Provide a clear, accurate, and informative response to the query.\"\"\"\n",
+    "    system_prompt = \"\"\"You are a helpful AI assistant. \n",
+    "    Provide a clear, accurate, and informative response to the query.\"\"\"\n",
     "    \n",
     "    # Create the user prompt based on whether context is provided\n",
     "    if context:\n",
@@ -594,7 +603,7 @@
     "    \n",
     "    # Generate the response using the OpenAI client\n",
     "    response = client.chat.completions.create(\n",
-    "        model=\"meta-llama/Llama-3.2-3B-Instruct\",\n",
+    "        model=\"deepseek-ai/DeepSeek-V3\",\n",
     "        messages=[\n",
     "            {\"role\": \"system\", \"content\": system_prompt},\n",
     "            {\"role\": \"user\", \"content\": user_prompt}\n",
@@ -912,7 +921,8 @@
     "    Returns:\n",
     "        str: Comparison analysis\n",
     "    \"\"\"\n",
-    "    system_prompt = \"\"\"You are an expert evaluator of RAG systems. Your task is to compare responses from two different RAG approaches:\n",
+    "    system_prompt = \"\"\"\n",
+    "    You are an expert evaluator of RAG systems. Your task is to compare responses from two different RAG approaches:\n",
     "1. Self-RAG: A dynamic approach that decides if retrieval is needed and evaluates information relevance and response quality\n",
     "2. Traditional RAG: Always retrieves documents and uses them to generate a response\n",
     "\n",
@@ -943,7 +953,7 @@
     "\"\"\"\n",
     "\n",
     "    response = client.chat.completions.create(\n",
-    "        model=\"meta-llama/Llama-3.2-3B-Instruct\",  # Using a stronger model for evaluation\n",
+    "        model=\"deepseek-ai/DeepSeek-V3\",  # Using a stronger model for evaluation\n",
     "        messages=[\n",
     "            {\"role\": \"system\", \"content\": system_prompt},\n",
     "            {\"role\": \"user\", \"content\": user_prompt}\n",
@@ -970,7 +980,8 @@
     "    Returns:\n",
     "        str: Overall analysis\n",
     "    \"\"\"\n",
-    "    system_prompt = \"\"\"You are an expert evaluator of RAG systems. Your task is to provide an overall analysis comparing\n",
+    "    system_prompt = \"\"\"\n",
+    "    You are an expert evaluator of RAG systems. Your task is to provide an overall analysis comparing\n",
     "    Self-RAG and Traditional RAG based on multiple test queries.\n",
     "\n",
     "    Focus your analysis on:\n",
@@ -997,7 +1008,7 @@
     "    \"\"\"\n",
     "\n",
     "    response = client.chat.completions.create(\n",
-    "        model=\"meta-llama/Llama-3.2-3B-Instruct\",\n",
+    "        model=\"deepseek-ai/DeepSeek-V3\",\n",
     "        messages=[\n",
     "            {\"role\": \"system\", \"content\": system_prompt},\n",
     "            {\"role\": \"user\", \"content\": user_prompt}\n",
@@ -1056,26 +1067,25 @@
       "Assessing support...\n",
       "Support rating: fully supported\n",
       "Rating utility...\n",
-      "Utility rating: 4/5\n",
-      "Overall score: 19\n",
+      "Utility rating: 5/5\n",
+      "Overall score: 20\n",
       "New best response found!\n",
       "\n",
       "Processing context 2/3...\n",
-      "Generating response...\n",
-      "Assessing support...\n",
-      "Support rating: partially supported\n",
-      "Rating utility...\n",
-      "Utility rating: 4/5\n",
-      "Overall score: 9\n",
-      "\n",
-      "Processing context 3/3...\n",
       "Generating response...\n",
       "Assessing support...\n",
       "Support rating: fully supported\n",
       "Rating utility...\n",
       "Utility rating: 5/5\n",
       "Overall score: 20\n",
-      "New best response found!\n",
+      "\n",
+      "Processing context 3/3...\n",
+      "Generating response...\n",
+      "Assessing support...\n",
+      "Support rating: fully supported\n",
+      "Rating utility...\n",
+      "Utility rating: 4/5\n",
+      "Overall score: 19\n",
       "\n",
       "=== Self-RAG Completed ===\n",
       "\n",
@@ -1087,36 +1097,43 @@
       "\n",
       "=== OVERALL ANALYSIS ===\n",
       "\n",
-      "**Overall Analysis: Self-RAG vs Traditional RAG**\n",
+      "### **Comprehensive Analysis: Self-RAG vs. Traditional RAG**  \n",
       "\n",
-      "Based on the comparison results from the test query \"What are the main ethical concerns in AI development?\", I will provide a comprehensive analysis of the strengths and weaknesses of both Self-RAG and Traditional RAG systems.\n",
+      "#### **1. When Self-RAG Performs Better and Why**  \n",
+      "Self-RAG outperforms Traditional RAG in scenarios where:  \n",
+      "- **Dynamic retrieval is beneficial**: In the test query (*\"What are the main ethical concerns in AI development?\"*), Self-RAG correctly determined that retrieval was needed (Retrieval needed: True) and fetched highly relevant documents (Relevant docs: 3/3). This ensures the response is grounded in up-to-date, authoritative sources.  \n",
+      "- **Precision and conciseness matter**: Self-RAG’s response was more focused, covering key ethical concerns (bias, transparency, privacy, safety) without unnecessary details. This is due to its ability to evaluate the **relevance and support** of retrieved documents before generating an answer.  \n",
+      "- **Complex or ambiguous queries**: Self-RAG’s retrieval decision-making (e.g., skipping retrieval for factual questions or when confidence is high) avoids unnecessary searches, improving efficiency.  \n",
       "\n",
-      "**When Self-RAG performs better:**\n",
+      "#### **2. When Traditional RAG Performs Better and Why**  \n",
+      "Traditional RAG may be preferable when:  \n",
+      "- **Speed is critical**: Since Traditional RAG always retrieves documents (no dynamic decision-making), it can be faster in simple, high-retrieval-need cases where the overhead of Self-RAG’s evaluation isn’t justified.  \n",
+      "- **Queries require broad, less filtered information**: Traditional RAG retrieves all relevant documents without filtering for support or relevance, which might be useful for exploratory queries where comprehensiveness is valued over precision.  \n",
       "\n",
-      "1. **Dynamic retrieval decisions**: Self-RAG's ability to dynamically adjust its retrieval decisions based on the query context and user feedback can lead to better results in complex queries with multiple relevant documents. In the case of Query 1, Self-RAG's retrieval needed was True, indicating that it was able to identify the most relevant documents for the query. This suggests that Self-RAG's dynamic retrieval decisions were effective in this scenario.\n",
-      "2. **Relevance and support evaluation**: Self-RAG's evaluation of relevance and support can lead to more accurate and informative responses. In this case, Self-RAG's relevant docs were 3/3, indicating that it was able to identify the most relevant documents for the query. This suggests that Self-RAG's evaluation of relevance and support was effective in this scenario.\n",
+      "#### **3. Impact of Dynamic Retrieval in Self-RAG**  \n",
+      "Self-RAG’s dynamic retrieval:  \n",
+      "- **Reduces unnecessary searches**: By deciding whether to retrieve based on query complexity and confidence, it avoids redundant API calls or database lookups.  \n",
+      "- **Improves response quality**: In the test query, it ensured only high-relevance documents were used, leading to a more accurate and concise answer.  \n",
+      "- **May introduce latency**: The additional step of evaluating retrieval need could slow down responses in some cases, though this is often offset by higher-quality outputs.  \n",
       "\n",
-      "**When Traditional RAG performs better:**\n",
+      "#### **4. Value of Relevance and Support Evaluation in Self-RAG**  \n",
+      "Self-RAG’s ability to assess **relevance** (is the document on-topic?) and **support** (does it substantiate the claim?) ensures:  \n",
+      "- **Higher factual accuracy**: Irrelevant or weakly supported documents are filtered out.  \n",
+      "- **More trustworthy responses**: The model can cite sources more confidently, as seen in the test query where all retrieved docs were relevant.  \n",
+      "- **Reduced hallucination**: By verifying document support, Self-RAG minimizes unsupported claims.  \n",
       "\n",
-      "1. **Simple queries**: Traditional RAG may perform better in simple queries with a single relevant document. In this case, the query \"What are the main ethical concerns in AI development?\" may have been too complex for Traditional RAG to handle effectively.\n",
-      "2. **Pre-defined ranking**: Traditional RAG's pre-defined ranking may be more effective in scenarios where the ranking of documents is not critical. In this case, the query \"What are the main ethical concerns in AI development?\" may not have required a highly ranked response.\n",
+      "#### **5. Overall Recommendations**  \n",
+      "- **Use Self-RAG for**:  \n",
+      "  - Complex, open-ended questions (e.g., ethical debates, multi-faceted topics).  \n",
+      "  - Queries requiring precision and authoritative sourcing.  \n",
+      "  - Scenarios where retrieval costs (time, compute) need optimization.  \n",
+      "- **Use Traditional RAG for**:  \n",
+      "  - Simple, fact-based queries where retrieval is always needed.  \n",
+      "  - Applications where response speed is prioritized over nuanced filtering.  \n",
+      "  - Exploratory searches where breadth of information is more important than conciseness.  \n",
       "\n",
-      "**The impact of dynamic retrieval decisions in Self-RAG:**\n",
-      "\n",
-      "Self-RAG's dynamic retrieval decisions can lead to better results in complex queries with multiple relevant documents. However, this may also lead to over-retrieval or under-retrieval of documents, depending on the query context and user feedback. To mitigate this, Self-RAG's dynamic retrieval decisions should be carefully tuned to ensure that the most relevant documents are retrieved.\n",
-      "\n",
-      "**The value of relevance and support evaluation in Self-RAG:**\n",
-      "\n",
-      "Self-RAG's evaluation of relevance and support is critical in ensuring that the retrieved documents are accurate and informative. By evaluating the relevance and support of each document, Self-RAG can provide more accurate and informative responses. However, this evaluation should be carefully tuned to ensure that the most relevant documents are retrieved.\n",
-      "\n",
-      "**Overall recommendations:**\n",
-      "\n",
-      "1. **Use Self-RAG for complex queries**: Self-RAG's dynamic retrieval decisions and evaluation of relevance and support make it a better choice for complex queries with multiple relevant documents.\n",
-      "2. **Use Traditional RAG for simple queries**: Traditional RAG's pre-defined ranking and simplicity make it a better choice for simple queries with a single relevant document.\n",
-      "3. **Tune Self-RAG's dynamic retrieval decisions**: Self-RAG's dynamic retrieval decisions should be carefully tuned to ensure that the most relevant documents are retrieved.\n",
-      "4. **Evaluate relevance and support in Self-RAG**: Self-RAG's evaluation of relevance and support is critical in ensuring that the retrieved documents are accurate and informative.\n",
-      "\n",
-      "In conclusion, Self-RAG and Traditional RAG have different strengths and weaknesses, and the choice of which system to use depends on the type of query and the desired outcome. By understanding the strengths and weaknesses of each system, we can make informed decisions about which system to use in different scenarios.\n"
+      "### **Final Verdict**  \n",
+      "For queries like *\"What are the main ethical concerns in AI development?\"*, **Self-RAG is the superior choice** due to its dynamic retrieval, relevance filtering, and concise output. Traditional RAG remains viable for simpler, high-retrieval-need cases where speed is critical. The choice depends on the trade-off between precision, efficiency, and query complexity.\n"
      ]
     }
    ],
@@ -1155,7 +1172,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv-new-specific-rag",
+   "display_name": "rag",
    "language": "python",
    "name": "python3"
   },
@@ -1169,7 +1186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.23"
   }
  },
  "nbformat": 4,
